add recipe doc
