# docs/swagger.json
@@ -40,9 +40,7 @@
   "paths": {
     "/api/auth/register": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User registration",
         "operationId": "registerUser",
         "description": "**User Registration**\n\nCreates a new user account in the system.  \nThe user must provide their full name, a valid and unique email address, a secure password,  \nand confirm acceptance of the privacy policy.  \n\n### Notes\n- All fields are required.\n- Passwords should be at least 8 characters and include letters, numbers, and symbols.\n- A unique email is required for each account.\n- On success, an access token is returned for authenticated requests.\n",
@@ -52,11 +50,7 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "name",
-                  "email",
-                  "password"
-                ],
+                "required": ["name", "email", "password"],
                 "properties": {
                   "name": {
                     "type": "string",
@@ -85,11 +79,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -101,9 +91,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": [
-                        "accessToken"
-                      ],
+                      "required": ["accessToken"],
                       "properties": {
                         "accessToken": {
                           "type": "string",
@@ -124,9 +112,7 @@
     },
     "/api/auth/login": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User login",
         "operationId": "loginUser",
         "description": "**User Login**\n\nAllows a registered user to log in by providing their email and password.\n\n### Required Fields\n- **Email**: The email address associated with the account.\n- **Password**: The account password.\n\n### Notes\n- On success, an access token is returned for authenticating further requests.\n- No authentication is required to access this endpoint.\n",
@@ -136,10 +122,7 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "email",
-                  "password"
-                ],
+                "required": ["email", "password"],
                 "properties": {
                   "email": {
                     "type": "string",
@@ -163,11 +146,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -181,9 +160,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": [
-                        "accessToken"
-                      ],
+                      "required": ["accessToken"],
                       "properties": {
                         "accessToken": {
                           "type": "string",
@@ -208,9 +185,7 @@
     },
     "/api/auth/refresh": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "Refresh session accessToken",
         "operationId": "refresh",
         "description": "Refresh session accessToken",
@@ -226,11 +201,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -242,9 +213,7 @@
                     },
                     "data": {
                       "type": "object",
-                      "required": [
-                        "accessToken"
-                      ],
+                      "required": ["accessToken"],
                       "properties": {
                         "accessToken": {
                           "type": "string",
@@ -268,9 +237,7 @@
     },
     "/api/auth/logout": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "summary": "User logout",
         "operationId": "logoutUser",
         "description": "Log out a user",
@@ -292,9 +259,7 @@
     },
     "/api/recipes": {
       "get": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "summary": "Get list of recipes",
         "operationId": "getRecipesServices",
         "description": "Get all public recipes",
@@ -351,11 +316,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -423,9 +384,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "summary": "Add own recipe",
         "operationId": "postRecipes",
         "description": "Add own recipe",
@@ -443,7 +402,7 @@
                 "required": [
                   "title",
                   "category",
-                  "area",
+                  "time",
                   "ingredients",
                   "instructions",
                   "description"
@@ -459,10 +418,10 @@
                     "description": "Category ID (Schema.Types.ObjectId)",
                     "example": "64c8d958249fae54bae90bb9"
                   },
-                  "area": {
+                  "calories": {
                     "type": "string",
-                    "description": "Area name",
-                    "example": "British"
+                    "description": "Calories",
+                    "example": "1200"
                   },
                   "instructions": {
                     "type": "string",
@@ -509,9 +468,7 @@
     },
     "/api/recipes/{id}": {
       "get": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "summary": "Get recipe by id",
         "operationId": "getRecipeById",
         "description": "Get recipe by id",
@@ -534,11 +491,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -568,9 +521,7 @@
     },
     "/api/categories": {
       "get": {
-        "tags": [
-          "Categories"
-        ],
+        "tags": ["Categories"],
         "summary": "Get list of categories",
         "operationId": "getCategories",
         "description": "Get list of all available recipe categories.",
@@ -582,11 +533,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -615,9 +562,7 @@
     },
     "/api/ingredients": {
       "get": {
-        "tags": [
-          "Ingredients"
-        ],
+        "tags": ["Ingredients"],
         "summary": "Get list of ingredients",
         "operationId": "getIngredients",
         "description": "Get list of all available ingredients.",
@@ -629,11 +574,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -662,9 +603,7 @@
     },
     "/api/currentUser": {
       "get": {
-        "tags": [
-          "Users"
-        ],
+        "tags": ["Users"],
         "summary": "Get current user",
         "operationId": "getCurrentUser",
         "description": "Returns data about the currently logged-in user.",
@@ -680,11 +619,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -713,9 +648,7 @@
     },
     "/api/recipes/my": {
       "get": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "summary": "Get user's own recipes",
         "description": "Returns a list of recipes created by the authenticated user.",
         "operationId": "getMyRecipes",
@@ -784,9 +717,7 @@
       "post": {
         "summary": "Add a recipe to user favorites",
         "operationId": "addRecipeToFavorites",
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "security": [
           {
             "bearerAuth": []
@@ -847,9 +778,7 @@
       "delete": {
         "summary": "Remove a recipe from user favorites",
         "operationId": "removeRecipeToFavorites",
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "security": [
           {
             "bearerAuth": []
@@ -881,9 +810,7 @@
     },
     "/api/recipes/{id}/favorites": {
       "get": {
-        "tags": [
-          "Recipes"
-        ],
+        "tags": ["Recipes"],
         "summary": "Get fevorites recipe by userId",
         "operationId": "getFavoritesRecipesById",
         "description": "Get fevorites recipe by userId",
@@ -928,11 +855,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "required": [
-                    "status",
-                    "message",
-                    "data"
-                  ],
+                  "required": ["status", "message", "data"],
                   "properties": {
                     "status": {
                       "type": "integer",
@@ -1046,9 +969,9 @@
                       "type": "string",
                       "example": "68a6e49aa790449984980dcf"
                     },
-                    "area": {
+                    "calories": {
                       "type": "string",
-                      "example": "British"
+                      "example": "1200"
                     },
                     "instructions": {
                       "type": "string",
@@ -1110,11 +1033,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
+              "required": ["status", "message", "data"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1141,11 +1060,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
+              "required": ["status", "message", "data"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1157,9 +1072,7 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": [
-                    "message"
-                  ],
+                  "required": ["message"],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -1178,11 +1091,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
+              "required": ["status", "message", "data"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1196,9 +1105,7 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": [
-                    "message"
-                  ],
+                  "required": ["message"],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -1241,11 +1148,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message",
-                "data"
-              ],
+              "required": ["status", "message", "data"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1259,10 +1162,7 @@
                 },
                 "data": {
                   "type": "object",
-                  "required": [
-                    "message",
-                    "errors"
-                  ],
+                  "required": ["message", "errors"],
                   "properties": {
                     "message": {
                       "type": "string",
@@ -1282,10 +1182,7 @@
           "application/json": {
             "schema": {
               "type": "object",
-              "required": [
-                "status",
-                "message"
-              ],
+              "required": ["status", "message"],
               "properties": {
                 "status": {
                   "type": "integer",
@@ -1398,10 +1295,7 @@
       },
       "Category": {
         "type": "object",
-        "required": [
-          "_id",
-          "name"
-        ],
+        "required": ["_id", "name"],
         "properties": {
           "_id": {
             "type": "string",
@@ -1415,11 +1309,7 @@
       },
       "Ingredients": {
         "type": "object",
-        "required": [
-          "_id",
-          "name",
-          "desc"
-        ],
+        "required": ["_id", "name", "desc"],
         "properties": {
           "_id": {
             "type": "string",
@@ -1434,10 +1324,7 @@
             "example": "Fresh red tomato used in salads and sauces."
           },
           "img": {
-            "type": [
-              "string",
-              "null"
-            ],
+            "type": ["string", "null"],
             "example": "https://cdn.tasteorama.com/images/tomato.png"
           },
           "createdAt": {
@@ -1454,11 +1341,7 @@
       },
       "User": {
         "type": "object",
-        "required": [
-          "id",
-          "name",
-          "email"
-        ],
+        "required": ["id", "name", "email"],
         "properties": {
           "id": {
             "type": "string",
